//
//  SpritekitUIAccessExampleUITests.m
//  SpritekitUIAccessExampleUITests
//
//  Created by hiiwave on 20/12/2017.
//  Copyright © 2017 pong. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface SpritekitUITestingExampleUITests : XCTestCase

@end

@implementation SpritekitUITestingExampleUITests

- (void)setUp {
  [super setUp];
  
  // Put setup code here. This method is called before the invocation of each test method in the class.
  
  // In UI tests it is usually best to stop immediately when a failure occurs.
  self.continueAfterFailure = NO;
  // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
  [[[XCUIApplication alloc] init] launch];
  
  // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
  // Put teardown code here. This method is called after the invocation of each test method in the class.
  [super tearDown];
}

- (void)testExample {
  // Use recording to get started writing UI tests.
  // Use XCTAssert and related functions to verify your tests produce the correct results.
  XCUIApplication *app = [[XCUIApplication alloc] init];
  XCTAssert(app.buttons[@"helloLabel"].exists);
  [app.buttons[@"node1"] tap];
  [app.buttons[@"node2"] tap];
  [app.buttons[@"nextBtn"] tap];
  XCTAssert(!app.buttons[@"helloLabel"].exists);
  [app.buttons[@"lastBtn"] tap];
  
  XCTAssert(app.buttons[@"helloLabel"].exists);
  [app.buttons[@"helloLabel"] tap];
}

- (void)testFailedExample {
  // Use recording to get started writing UI tests.
  // Use XCTAssert and related functions to verify your tests produce the correct results.
  XCUIApplication *app = [[XCUIApplication alloc] init];
  [app.buttons[@"nextBtn"] tap];
  XCTAssert(app.buttons[@"helloLabel"].exists);
  [app.buttons[@"lastBtn"] tap];
  XCTAssert(app.buttons[@"helloLabel"].exists);
}

@end
